--- a/VRChat/05/1280305.html
+++ b/VRChat/05/1280305.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ynyDsze24gPgflMWKeh84eHeLUZgBKDDhD4QjICsU2A="></script>
+    "ua5RmD31mTTiUVyRHPtVuEpP+FQFDAGjfi84jE34RA4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チェインブレイド","description":"VRChat向け3Dモデル 『チェインブレイド』\n\n△17954ポリゴン\n(非表示メッシュも合わせる場合△61259ポリゴン)\n\n\nテクスチャが7色(黒、白、青、赤、緑、黄、桃)あります。\nまた、Emission、Metallic、Normalも付属しています。\n\nシェイプキーはスイッチ×2、トリガー、ギア回転の4種があります。\n\nマテリアルは1つにまとめており、シェーダーはArktoonを使用しています。\n\n動作確認動画\nhttps://www.youtube.com/watch?v=M07Nu_ImmRk\u0026feature=youtu.be\n","url":"https://booth.pm/ja/items/1280305","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/fd12f873-ecbb-4fe4-973b-3208cf7ebc52/i/1280305/b8ae004e-9e93-4b34-9730-fa0c17f17451_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ynyDsze24gPgflMWKeh84eHeLUZgBKDDhD4QjICsU2A="></script>
+    nonce="ua5RmD31mTTiUVyRHPtVuEpP+FQFDAGjfi84jE34RA4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -490,9 +490,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
