--- a/VRChat/39/1277139.html
+++ b/VRChat/39/1277139.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "m5Dn0CvrCxtatCDouF5KpV6/mkeSlYeTVT9t6pU4JBQ="></script>
+    "V4XBV2UuYgqpJtpBcPvt0mpHVfYkfn+e3zlfAZbaKu0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バトペン筆箱","description":"各総ポリ数：400未満\n各マテリアル数：3\n\nこちらは腕にデュ〇ルディ〇ク風に装着を想定したものとなっております。\n5本のうち1本はオリジナルのテクスチャに切り替えられます！自分のバトペンを持ってバトろう！！\n\nアレジゴクゲームス プレイボーン様 twitter\nhttps://twitter.com/VPlaybone\n\n～バトペン一覧～\nhttps://drive.google.com/drive/folders/1DUiP83olgadkr9swPfypm2VjtuNGjRTa\n\n※2枚目[使用例]に使用したモデル\nバーチャルモデルクリエイターぬこみや様\n　VR-UMAゔるまちゃん改変モデル","url":"https://booth.pm/ja/items/1277139","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1277139/f2b07770-7254-4573-a043-1820d40fd8aa_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="m5Dn0CvrCxtatCDouF5KpV6/mkeSlYeTVT9t6pU4JBQ="></script>
+    nonce="V4XBV2UuYgqpJtpBcPvt0mpHVfYkfn+e3zlfAZbaKu0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -358,9 +358,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
