--- a/VRChat/66/1277266.html
+++ b/VRChat/66/1277266.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "2VWmh8Q7B5/FChAS29OeDOtj7GvPbGEubvHXHtaZS6A="></script>
+    "bpG8EOjUdiRn+qwoxPuNxRY/SM4W5JA85pt0SGRg7K4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"焚火","description":"-特徴-\n\n・暖炉などに設置する用の焚火です。\n・専用のshaderで火に疑似的な奥行きとボリューム感を出しています。\n・軽量かつキレイに描画できます。\n・奥にあるものを揺らがせて描画することができます。\n\nサンプル動画\nhttps://youtu.be/5Z8qrRhZVBo\n\n-注意点-\n\n・横から見るには適していません。\n・正面左右60度以上横から見ると破綻が大きくなります。\n・動画にはpost-processingが使われています。\n\n-内容-\n・fire.unitypackage\n・Readme\n\n\n-ライセンス-\n\n対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。\n\n・ただし下記を禁止します。\n\n他人が利用できるようにし、著作者の販売を阻害すること。\nコンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n法人利用をすること。\n\n\n・その他\n\nコンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n利用権利は他人に譲渡することができません。\n\nこのライセンスにおける解説情報は下記になります。\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n（タオルライセンス 販売用 version0.9）\n\n\n-使用方法-\n\nfire.unitypackageをインポートfire prehabを設置する。\n\n-連絡先-\n\nhttps://twitter.com/lept_on","url":"https://booth.pm/ja/items/1277266","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/408b6933-3b28-43c3-ad6b-bcf87be77732/i/1277266/ddbbe34d-1e72-46c0-9561-c7307b1119a3_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2VWmh8Q7B5/FChAS29OeDOtj7GvPbGEubvHXHtaZS6A="></script>
+    nonce="bpG8EOjUdiRn+qwoxPuNxRY/SM4W5JA85pt0SGRg7K4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -420,9 +420,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
